<?xml version="1.0"?>
<package format="3">

  <name>uwbpsr_ratros2</name>
  <version>2.1.0</version>
  <description>The nlink parser package, used for products of nooploop, upgraded by Ratboss</description>
  <maintainer email="thickwall2345@gmail.com">Samuel Hsu</maintainer>
  <license>BSD</license>
  <url type="website">https://www.nooploop.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

